--- a/book.bib
+++ b/book.bib
@@ -76,3 +76,11 @@
 }
 
 
+@book{Hilera2000,
+  title     = {Redes Neuronales Artificiales: Fundamentos, Modelos y Aplicaciones},
+  author    = {José Ramón Hilera González and Víctor José Martínez Hernando},
+  year      = {2000},
+  publisher = {Ra-Ma},
+  isbn      = {9788478974835},
+  url       = {https://www.researchgate.net/publication/44343683_Redes_neuronales_artificiales_fundamentos_modelos_y_aplicaciones_Jose_Ramon_Hilera_Gonzalez_Victor_Jose_Martinez_Hernando}
+}
